--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,17 +96,17 @@ extra:
   analytics:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/squidfunk
-    - icon: fontawesome/brands/gitter
-      link: https://gitter.im/squidfunk/mkdocs-material
-    - icon: fontawesome/brands/docker
-      link: https://hub.docker.com/r/squidfunk/mkdocs-material/
-    - icon: fontawesome/brands/python
-      link: https://pypi.org/project/mkdocs-material/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/squidfunk
+  #social:
+ #   - icon: fontawesome/brands/github
+ #     link: https://github.com/squidfunk
+  #  - icon: fontawesome/brands/gitter
+  #    link: https://gitter.im/squidfunk/mkdocs-material
+   # - icon: fontawesome/brands/docker
+   #   link: https://hub.docker.com/r/squidfunk/mkdocs-material/
+#    - icon: fontawesome/brands/python
+ #     link: https://pypi.org/project/mkdocs-material/
+  #  - icon: fontawesome/brands/twitter
+ #     link: https://twitter.com/squidfunk
 
 # Extensions
 markdown_extensions:
