--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ theme:
     code: Roboto Mono
   favicon: assets/favicon.png
   icon:
-    logo: logo
+    logo: assets/logo-cd29.png
 
 # Plugins
 plugins:
