--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,9 +72,9 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: assets/favicon-cd29.png
+  favicon: assets/favicon-cd29
   icon:
-    logo: assets/logo-cd29.png
+    logo: assets/logo-cd29
 
 # Plugins
 plugins:
