--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,19 @@ theme:
 # Plugins
 plugins:
   - search
+  - glightbox:
+      touchNavigation: true
+      loop: false
+      effect: zoom
+      slide_effect: slide
+      width: 100%
+      height: auto
+      zoomable: true
+      draggable: true
+      skip_classes:
+        - custom-skip-class-name
+      auto_caption: false
+      caption_position: bottom
   - redirects:
       redirect_maps:
         changelog/insiders.md: insiders/changelog.md
