Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,15 +91,15 @@ plugins:
         - custom-skip-class-name
       auto_caption: false
       caption_position: bottom
-  - redirects:
-      redirect_maps:
-        changelog/insiders.md: insiders/changelog.md
-        conventions.md: philosophy.md
-        reference/abbreviations.md: reference/tooltips.md
-        reference/meta-tags.md: reference/index.md
-        reference/variables.md: https://mkdocs-macros-plugin.readthedocs.io/
-        sponsorship.md: insiders/index.md
-        upgrading.md: upgrade.md
+#  - redirects:
+#      redirect_maps:
+#        changelog/insiders.md: insiders/changelog.md
+#        conventions.md: philosophy.md
+#        reference/abbreviations.md: reference/tooltips.md
+#        reference/meta-tags.md: reference/index.md
+#        reference/variables.md: https://mkdocs-macros-plugin.readthedocs.io/
+#        sponsorship.md: insiders/index.md
+#        upgrading.md: upgrade.md
   - minify:
       minify_html: true
 
