Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@
 # Project information
 site_name: Documentation CD29
 site_url: https://cd29.rpa-solutions.io
-site_author: Romain YOUSSOFI
+site_author: RPA Solutions
 site_description: >-
   Documentation pour le Conseil départemental du finistère
 
