Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,7 @@ site_name: Documentation CD29
 site_url: https://cd29.rpa-solutions.io
 site_author: RPA Solutions
 site_description: >-
-  Documentation pour le Conseil départemental du finistère
-
+  Documentation pour le Conseil départemental du finistère.
 # Repository
 repo_name: 
 repo_url: 
