--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ plugins:
 
 # Customization
 extra:
+  generator: false
   analytics:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
