--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,7 +165,7 @@ markdown_extensions:
 nav:
   - Accueil: index.md
   - Reprise des marchés SAFI:
-    - Présentation: SAFI/technique.md
+    - Présentation: SAFI/presentation.md
     - A_Initialisation: SAFI/A_Initialisation.md
     - B_CreationNouveauMarche: SAFI/B_CreationNouveauMarche.md
     - C_CreationContractant: SAFI/C_CreationContractant.md
@@ -174,6 +174,7 @@ nav:
     - F_Finalisation: SAFI/F_Finalisation.md
     - G_RapportErreur: SAFI/G_RapportErreur.md
     - Mémo Javascript: SAFI/javascript.md
+    - Annexes: SAFI/annexes.md
 #- Getting started:
 #  - Installation: getting-started.md
 #  - Creating your site: creating-your-site.md
