Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -175,6 +175,8 @@ nav:
     - G_RapportErreur: SAFI/G_RapportErreur.md
     - Mémo Javascript: SAFI/javascript.md
     - Annexes: SAFI/annexes.md
+  - Mémo Javascript:
+    - Grand Angle: memo-javascript/grand-angle.md
 #- Getting started:
 #  - Installation: getting-started.md
 #  - Creating your site: creating-your-site.md
