--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,15 +1,15 @@
 # Which collections CloudCannon will show in the CMS sidebar
 collections_config:
-  SAFI:
-    name: SAFI
-    path: "SAFI"
+  docs:
+    name: Documentation
+    path: "docs"
     output: true
     url: "/[full_slug]/" # mkdocs' default url behavior for nested files
 
 # Where CloudCannon should put new files, and how it should build URLs
 paths:
-  uploads: "SAFI" # Put new files inside the docs folder
-  static: "SAFI" # Reference files in the docs folder as /<file>
+  uploads: "docs" # Put new files inside the docs folder
+  static: "docs" # Reference files in the docs folder as /<file>
 
 # The available buttons in the CloudCannon Content Editor
 _editables:
