--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,8 +1,8 @@
 # Which collections CloudCannon will show in the CMS sidebar
 collections_config:
   docs:
-    name: Documentation
-    path: "docs"
+    name: SAFI
+    path: "docs/SAFI"
     output: true
     url: "/[full_slug]/" # mkdocs' default url behavior for nested files
 
