--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,6 +1,6 @@
 # Which collections CloudCannon will show in the CMS sidebar
 collections_config:
-  docs:
+  SAFI:
     name: SAFI
     path: "docs/SAFI"
     output: true
