--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -5,7 +5,11 @@ collections_config:
     path: "docs/SAFI"
     output: true
     url: "/[full_slug]/" # mkdocs' default url behavior for nested files
-
+  MemoJavaScript:
+    name: Mémo Javascript
+    path: "docs/memo-javascript"
+    output: true
+    url: "/[full_slug]/" # mkdocs' default url behavior for nested files
 # Where CloudCannon should put new files, and how it should build URLs
 paths:
   uploads: "docs" # Put new files inside the docs folder
