Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,17 +165,17 @@ markdown_extensions:
 nav:
   - Accueil: index.md
   - Reprise des marchés SAFI:
-    - Présentation: SAFI/presentation.md
-    - A_Initialisation: SAFI/A_Initialisation.md
-    - B_CreationNouveauMarche: SAFI/B_CreationNouveauMarche.md
-    - C_CreationContractant: SAFI/C_CreationContractant.md
-    - D_FormulesActes: SAFI/D_FormulesActes.md
-    - E_RapportExecution: SAFI/E_RapportExecution.md
-    - F_Finalisation: SAFI/F_Finalisation.md
-    - G_RapportErreur: SAFI/G_RapportErreur.md
-    - Annexes: SAFI/annexes.md
+    - Présentation: /SAFI/presentation.md
+    - A_Initialisation: /SAFI/A_Initialisation.md
+    - B_CreationNouveauMarche: /SAFI/B_CreationNouveauMarche.md
+    - C_CreationContractant: /SAFI/C_CreationContractant.md
+    - D_FormulesActes: /SAFI/D_FormulesActes.md
+    - E_RapportExecution: /SAFI/E_RapportExecution.md
+    - F_Finalisation: /SAFI/F_Finalisation.md
+    - G_RapportErreur: /SAFI/G_RapportErreur.md
+    - Annexes: /SAFI/annexes.md
   - Mémo Javascript:
-    - Grand Angle: memo-javascript/grand-angle.md
+    - Grand Angle: /memo-javascript/grand-angle.md
 #- Getting started:
 #  - Installation: getting-started.md
 #  - Creating your site: creating-your-site.md
