Updated 'mkdocs.yml' via CloudCannon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ repo_name:
 repo_url: 
 
 # Copyright
-copyright: Copyright &copy; 2023 RPA Solutions
+copyright: Copyright &copy; 2023 RPA Solutions 2023
 
 # Configuration
 theme:
